--- a/src/sections/product.liquid
+++ b/src/sections/product.liquid
@@ -1,4 +1,4 @@
-<section data-section-id="{{ section.id }}" data-section-type="product" data-enable-history-state="true" itemscope itemtype="http://schema.org/Product">
+<section data-section-id="{{ section.id }}" data-section-type="product" data-enable-history-state="true" itemscope itemtype="http://schema.org/Product" class="mb-5">
   {% assign current_variant = product.selected_or_first_available_variant %}
   {% assign featured_image = product.featured_image %}
   {% assign product_note = section.settings.product_note %}
