--- a/src/snippets/content-object.liquid
+++ b/src/snippets/content-object.liquid
@@ -64,6 +64,15 @@
               text_color: content_color,
               text_alignment: text_alignment_classes
     %}
+    {% render 'cta-block',
+                text_alignment: text_alignment_classes,
+                cta_text_1: cta_text_1,
+                cta_url_1: cta_url_1,
+                cta_type_1: cta_type_1,
+                cta_text_2: cta_text_2,
+                cta_url_2: cta_url_2,
+                cta_type_2: cta_type_2,
+    %}
   </div>
 </div>
 
